# AxenMatrixLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_RUS.md  valgrind.supp
src/: .clang-format  .clang-tidy
src/MatrixLib/: CMakeLists.txt
src/MatrixLib/include/MatrixLib/: Matrix.h  Utils.h
src/MatrixLib/include/axen/MatrixLib/: Matrix.h  Utils.h
src/MatrixLib/src/: Matrix.cpp  Utils.cpp
src/MatrixLibTests/: CMakeLists.txt  MatrixAccessTests.cpp  MatrixArithmeticTests.cpp  MatrixConstructionTests.cpp  MatrixLogicTests.cpp  MatrixMathTests.cpp  TestsSuite.h  UtilsTests.cpp
